--- a/Stigweb/index.html
+++ b/Stigweb/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
+
+<style>
+    #myContainer {
+        width: 400px;
+        height: 400px;
+        position: relative;
+        background: yellow;
+    }
+
+    #myAnimation {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        background: red;
+    }
+</style>
 <title>HTML Tutorial</title>
+
+
 
 <head>
     <title>TEST</title>
     <script src="script.js"></script>
-</head>    
+</head>
 
 <body>
 
@@ -15,6 +33,14 @@
     <p id="console">CONSOLE</p>
 
     <button onclick="runCode()">Click Me</button>
+
+    <button onclick="myMove()">Anim</button>
+
+
+    <div id="myContainer">
+        <div id="myAnimation">My animation will go here</div>
+    </div>
+
 
 </body>
 
