--- a/charttest.html
+++ b/charttest.html
@@ -17,29 +17,73 @@
 
     <script> 
 
-        var pieData = {
-            labels: ["Purple", "Green", "Orange", "Yellow"],
-            datasets: [
-                {
-                    data: [20, 40, 10, 30],
-                    backgroundColor: [
-                        "#878BB6",
-                        "#4ACAB4",
-                        "#FF8153",
-                        "#FFEA88"
-                    ]
-                }]
-        };
-        // Get the context of the canvas element we want to select
-        var ctx = document.getElementById("myData").getContext("2d");
-        //new Chart(ctx).Pie(pieData);
-        /* New way to instantiate so that it do not thows Uncaught
-         TypeError: (intermediate value).Pie is not a function" */
-        var myPieChart = new Chart(ctx, {
-            type: 'pie',
-            data: pieData
+var ctx = document.getElementById("myData");
+var myChart = new Chart(ctx, {
+  type: 'bar',
+  data: {
+    labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+    datasets: [{
+        label: '# of Votes 1',
+        data: [10, 19, 3, 5, 2, 3],
+        backgroundColor: [
+          'rgba(255, 99, 132, 0.2)',
+          'rgba(255, 99, 132, 0.2)',
+          'rgba(255, 99, 132, 0.2)',
+          'rgba(255, 99, 132, 0.2)',
+          'rgba(255, 99, 132, 0.2)',
+          'rgba(255, 99, 132, 0.2)'
+        ],
+        borderColor: [
+          'rgba(255,99,132,1)',
+          'rgba(255,99,132,1)',
+          'rgba(255,99,132,1)',
+          'rgba(255,99,132,1)',
+          'rgba(255,99,132,1)',
+          'rgba(255,99,132,1)'
+        ],
+        borderWidth: 2
+      },
+      {
+        label: '# of Votes 2',
+        data: [15, 19, 3, 5, 2, 3],
+        backgroundColor: [
+          'rgba(255, 159, 64, 0.2)',
+          'rgba(255, 159, 64, 0.2)',
+          'rgba(255, 159, 64, 0.2)',
+          'rgba(255, 159, 64, 0.2)',
+          'rgba(255, 159, 64, 0.2)',
+          'rgba(255, 159, 64, 0.2)'
+        ],
+        borderColor: [
+          'rgba(255, 159, 64, 1)',
+          'rgba(255, 159, 64, 1)',
+          'rgba(255, 159, 64, 1)',
+          'rgba(255, 159, 64, 1)',
+          'rgba(255, 159, 64, 1)',
+          'rgba(255, 159, 64, 1)'
+        ],
+        borderWidth: 2
+      }
+    ]
+  },
+  options: {
+    scales: {
+      yAxes: [{
+        stacked: true,
+        ticks: {
+          beginAtZero: true
+        }
+      }],
+      xAxes: [{
+        stacked: true,
+        ticks: {
+          beginAtZero: true
+        }
+      }]
 
-        });
+    }
+  }
+});
     </script>
 
 </body>
