--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
         background: red;
     }
 </style>
-<title>HTML Tutorial</title>
+<title>STIGMERGE</title>
 
 
 
 <head>
     <meta charset="utf-8">
-    <title>JS Bin</title>
+    <title>Stigmerge</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js" type="text/javascript"></script>
     <script src="script.js"></script>
 </head>
 
 <body>
 
-    <h1>This is a heading</h1>
-    <p>This is a paragraph.</p>
+    <h1>Stigmerge</h1>
+    <p>Bio inspired distribution</p>
     
 
     <p id="console">CONSOLE</p>
 
     <button onclick="runCode()">New list</button>
 
-    <button onclick="paint()">Paint</button>
+    <button onclick="paint()">Random Exchange</button>
 
 
     <!--
