--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
     <p id="console">CONSOLE</p>
 
     <button onclick="runCode()">New list</button>
+    <button> Random Exchange </button>
 
-    <button onclick="paint()">Random Exchange</button>
+    <button> Random Exchange x 10</button>
+    <button> Random Exchange x 100</button>
+
+     <!--<button onclick="paint()">Random Exchange</button>
 
 
-    <!--
     <button onclick="myMove()">Anim</button>
 
 
