--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p id="console">CONSOLE</p>
 
     <button onclick="runCode()">New list</button>
-    <button> Random Exchange </button>
+    <button onclick="randChange()"> Random Exchange </button>
 
     <button> Random Exchange x 10</button>
     <button> Random Exchange x 100</button>
