Big code cleanup!
Fixed list randomizer and random movers
Mayor code cleanup
Moved developer output to console

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
 
     <p id="console">CONSOLE</p>
 
-    <button onclick="runCode()">New list</button>
-    <button onclick="randChange()"> Random Exchange </button>
+    <button onclick="b_newRandList()">New Random list</button>
+    <button onclick="b_newMinMaxList()">New Min-Max list</button>
 
-    <button> Random Exchange x 10</button>
-    <button> Random Exchange x 100</button>
+
+    <button onclick="b_randChange()"> Random Exchange </button>
+
+    <button onclick="b_randChangex10()"> Random Exchange x 10</button>
+    <button onclick="b_randChangex100()"> Random Exchange x 100</button>
 
      <!--<button onclick="paint()">Random Exchange</button>
 
