Limited exchange done!
Misadventures with types in javascript

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <input type="number" name="listNumber" id="listNumberIn" min="5" max="100" value="10" onchange="i_changeListN()">
         Max list size:
         <input type="number" name="listsize" id="listSizeIn" min="5" max="100" value="10" onchange="i_changeListS()">
+        Max exchange range:
+        <input type="number" name="exchangerange" id="exchangeRangeIn" min="1" max="5" value="1" onchange="i_changeRange()">
     </form>
 
      <!--<button onclick="paint()">Random Exchange</button>
