--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 -->
 
-    <canvas id="myData" width="800" height="200"></canvas>
+    <canvas id="mainCanvas" width="800" height="200"></canvas>
 
 
     <script> 
