Added maxed list option

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
     </form>
     <button onclick="b_newRandList()">New Random list</button>
-    <button onclick="b_newMinMaxList()">New Min-Max list</button>
+    <button onclick="b_newUniList()">New Min-Max list</button>
 
 
     <button onclick="b_randChange()"> Random Exchange </button>
