--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
         
     </form>
-    <button onclick="b_newRandList()">New Random list</button>
-    <button onclick="b_newUniList()">New Min-Max list</button>
+    <button onclick="b_newRandList()">New Random List</button>
+    <button onclick="b_newUniList()">New Uniform List list</button>
 
 
     <button onclick="b_randChange()"> Random Exchange </button>
