--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 
     <canvas id="mainCanvas" width="800" height="200"></canvas>
 
+    <button onclick="b_balance()"> Balance! </button>
 
-    <button onclick="b_play()"> Play </button>
+    <button onclick="b_play()"> Test0 </button>
     
     <button onclick="b_test1()"> Test1 </button>
     <!--
