Updated balancing method

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
     <button onclick="b_play()"> Test0 </button>
     
     <button onclick="b_test1()"> Test1 </button>
+
+    <form>
+        Target Standard Deviation: <input type="number" name="stdDev" id="stdDevN" min="0.5" max="2" value="1.5" onchange="i_changeSTDEV()"> 
+    </form>
     <!--
     <button onclick="b_randChangex100()"> Random Exchange x 100</button>    
     -->
